elements/cg-graph.css
:host {
    position: absolute;
    width: 100%;
    height: 100%;
}
#graph {
    width: 100%;
    height: 100%;
}
#graph #selection {
    fill: rgba(255, 255, 255, 0.2);
    stroke: rgba(255, 255, 255, 0.5);
    stroke-width: 1px;
}
#graph .group, #graph .block {
    cursor: move;
}
#graph .action > text {
    text-anchor: middle;
}
#graph .input, #graph .output {
    cursor: pointer;
}

